# language-coach

./: .gitignore  README.md  business-model-canvas.md  grok_analysis_report.md  intimacy.md  knowledge-networks.md  peace.md  requirement.md  solution.md  story.md  summary.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  summary.md
backend/app/: main.py
backend/app/database/: __init__.py  database.py  models.py
backend/app/engine/: __init__.py  selector.py  spaced_repetition.py
backend/app/routes/: __init__.py  auth.py  conversation.py  i1_progression.py  practice.py  progress.py  qa.py  settings.py  shadow_reading_steps.py
backend/app/services/: knowledge.py
backend/scripts/: fetch_kimi.py
data/kimi/: import_kimi.py  kimi_qa_records.jsonl  kimi_raw_conversations.json
docs/: BEFORE_AND_AFTER.md  DEVELOPER_GUIDE.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  data-structure-design.md  grok-sample-data.json  platform-comparison-analysis.md  shadow-reading-strategy.md
frontend/: index.html  next.config.mjs  package-lock.json  package.json
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  (+3 more)
frontend/app/: globals.css  layout.jsx  page.css  page.jsx
frontend/src/: App.css  App.jsx  index.css
product/: design.md  polyglot-voice-coach.pen  readme.md
(+99 files in other folders)
