[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-voice-coach-backend"
version = "1.0.0"
description = "Backend API for Polyglot Voice Coach"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    # Knowledge network deps
    "openai>=1.12.0",
    "networkx>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
